# nfs-cachefs

./: .dockerignore  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUSE_BLOCKING_FIX.md  GITHUB_RELEASE_GUIDE.md  IO_URING_BUILD_SUCCESS.md  IO_URING_REFACTORING_SUMMARY.md  LOCAL_BUILD_SUMMARY.md  MOUNT_SOLUTION.md  Makefile  NFS_CACHEFS_TROUBLESHOOTING.md  README.md  RELEASE_GUIDE.md  RELEASE_MANIFEST.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_SUMMARY.md  RELEASE_SUMMARY_v0.3.0.md  UPGRADE_PLAN.md  UPLOAD_INSTRUCTIONS.md  build-release.sh  create-github-release.md  download_release.sh  finish-release.sh  fix_nfs_cachefs.sh  install.sh  io-uring-implementation.md  mount.cachefs  nfs-cachefs-mount-fix-summary.md  nfs-cachefs-v0.2.0-linux-x86_64.tar.gz.sha256  publish-release.sh  release-notes-v0.4.0.md  release.sh  test-env.sh  test-io-uring-build.sh  test-io-uring.sh  (+5 more)
.github/workflows/: release.yml
benches/: cache_benchmark.rs
docs/: IO_URING.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT.md  RELEASE_PROCESS.md  architecture.md  fstab-configuration.md  implementation-guide.md  project.md  testing-plan.md
nfs-cachefs-v0.2.0-linux-x86_64/: LICENSE  README.md  nfs-cachefs
packaging/: install.sh  remote-install.sh
packaging/etc/nfs-cachefs/: daemon.toml
packaging/share/man/man8/: nfs-cachefs.8
packaging/systemd/: nfs-cachefs.service
release-packages/v0.1/: SHA256SUMS  VERSION  install.sh  nfs-cachefs
release-packages/v0.1.0/: INSTALL.md  RELEASE_NOTES.md  SHA256SUMS  VERSION  nfs-cachefs
reviews/: code_review_report.md  code_review_report_o3.md
src/: config.rs  cull.rs  daemon.rs  error.rs  lib.rs  main.rs  mount_helper.rs  signals.rs  systemd_notify.rs
src/cache/: eviction.rs  manager.rs  metrics.rs  mod.rs  state.rs  task.rs
src/core/: config.rs  error.rs  mod.rs
src/fs/: async_executor.rs  cachefs.rs  inode.rs  mod.rs
src/io/: buffer.rs  mod.rs  uring.rs
src/proto/: cmd.rs  mod.rs  state.rs
src/utils/: mod.rs  path.rs  time.rs
tests/e2e/: nfs-fscache.sh
