[package]
name = "nfs-cachefs"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Userspace daemon for Linux kernel fscache + cachefiles traditional mode (NFS read caching backed by NVMe)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "nfs-cachefs"
path = "src/main.rs"

[[bin]]
name = "nfs-cachefs-probe"
path = "src/bin/probe.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"
nix = { version = "0.27", default-features = false, features = ["fs", "poll", "signal"] }
walkdir = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
